// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="boxed-group boxed-group-inner"
>
  <table
    className="data zebra zebra-hover fixed"
  >
    <thead>
      <tr>
        <th
          className="nowrap"
        >
          title
        </th>
        <th
          className="nowrap"
          style={
            {
              "width": "80px",
            }
          }
        >
          status
        </th>
        <th
          className="nowrap"
          style={
            {
              "width": "140px",
            }
          }
        >
          project_branch_pull_request.last_analysis_date
        </th>
        <th
          className="nowrap"
          style={
            {
              "width": "50px",
            }
          }
        >
          actions
        </th>
      </tr>
    </thead>
    <tbody>
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-11",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="branch-branch-11"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-1",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="branch-branch-1"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": true,
            "name": "master",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="branch-master"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1",
            "target": "master",
            "title": "PR-1",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="pull-request-1"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-12",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="branch-branch-12"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "2",
            "target": "master",
            "title": "PR-2",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="pull-request-2"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-3",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="branch-branch-3"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-2",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="branch-branch-2"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "isOrphan": true,
            "key": "2",
            "target": "llb-100",
            "title": "PR-2",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="pull-request-2"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
    </tbody>
  </table>
</div>
`;

exports[`should render purge setting correctly 1`] = `
<div
  className="boxed-group boxed-group-inner"
>
  <table
    className="data zebra zebra-hover fixed"
  >
    <thead>
      <tr>
        <th
          className="nowrap"
        >
          title
        </th>
        <th
          className="nowrap"
          style={
            {
              "width": "80px",
            }
          }
        >
          status
        </th>
        <th
          className="nowrap"
          style={
            {
              "width": "140px",
            }
          }
        >
          project_branch_pull_request.last_analysis_date
        </th>
        <th
          className="nowrap"
          style={
            {
              "width": "150px",
            }
          }
        >
          <div
            className="display-flex-center"
          >
            <span>
              project_branch_pull_request.branch.auto_deletion.keep_when_inactive
            </span>
            <HelpTooltip
              className="little-spacer-left"
              overlay="project_branch_pull_request.branch.auto_deletion.keep_when_inactive.tooltip"
            />
          </div>
        </th>
        <th
          className="nowrap"
          style={
            {
              "width": "50px",
            }
          }
        >
          actions
        </th>
      </tr>
    </thead>
    <tbody>
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-11",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="branch-branch-11"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-1",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="branch-branch-1"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": true,
            "name": "master",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="branch-master"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1",
            "target": "master",
            "title": "PR-1",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="pull-request-1"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-12",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="branch-branch-12"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "2",
            "target": "master",
            "title": "PR-2",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="pull-request-2"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-3",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="branch-branch-3"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-2",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="branch-branch-2"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
      <Memo(BranchLikeRow)
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "isOrphan": true,
            "key": "2",
            "target": "llb-100",
            "title": "PR-2",
          }
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        displayPurgeSetting={true}
        key="pull-request-2"
        onDelete={[Function]}
        onRename={[Function]}
        onUpdatePurgeSetting={[MockFunction]}
      />
    </tbody>
  </table>
</div>
`;
